--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dante portfolio</title>
+		
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/all.min.css" />
 		<script src="http://velocityjs.org/blast/build/jquery.blast.js"></script>
@@ -29,6 +30,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/PixiPlugin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/TextPlugin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/EasePack.min.js"></script>
+          <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1636192990/magicmouse/magic_mouse-1.2.1.cdn.min.js"></script>
+		  
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -109,7 +112,7 @@
 			<div class="text-zone">
 				<h1>
 					Hi, <br />
-					I'm <span class="accent-color">D</span>ante, <br />
+					I'm <span id="accent-color" class="spin" style="color: red">D</span>ante, <br />
 					web developer
 				</h1>
 				<p class="gray-text">Front End Developer / expert</p>
@@ -257,7 +260,7 @@
 				<!-- magic wall 10 -->
 			</ul>
 		</div>
-
+		
 		<script src="index.js"></script>
 	</body>
 </html>
